Gestión de voluntarios: correcciones de errores, actualizaciones y ayuda, todo excepto la ejecución de una capacitación

--- a/WebContent/views/desktop/gestion/voluntariado/egreso/datosVoluntario.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/egreso/datosVoluntario.zul
@@ -41,7 +41,7 @@
 					
 					<div class="input-field col s6">
 						<n:label for="sexo" class="active">Sexo</n:label>
-						<combobox id="sexo" readonly="true" selectedItem="@bind(vm.sexoEnum)" disabled="true" model="@bind(vm.sexoEnums)">
+						<combobox id="sexo" readonly="true" disabled="true" model="@bind(vm.sexoEnums)" selectedItem="@bind(vm.sexoEnum)">
 							<template name="model">
 								<comboitem label="@load(each)" />
 							</template>
