--- a/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/InscripcionCapacitacionIndex.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/capacitacion/inscripcion/InscripcionCapacitacionIndex.zul
@@ -1,15 +1,14 @@
 <zk xmlns:n="native" xmlns:w="client">
 	<div class="wizard ${arg.animation_} container"
-		use="karen.core.wizard.controllers.C_WindowWizard"
-		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.capacitacion.inscripcion.viewmodels.VM_InscripcionCapacitacionIndex')">
+		 use="karen.core.simple_list.wizard.controllers.C_WindowWizard"
+		 apply="org.zkoss.bind.BindComposer"
+		 viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.capacitacion.inscripcion.viewmodels.VM_InscripcionCapacitacionIndex')">
+		
 		<div class="row">
-			<div id="ulHeaderWizard"
-				use="karen.core.wizard.buttons.containers.UlHeaderWizard">
-			</div>
+			<div id="ulHeaderWizard" use="karen.core.simple_list.wizard.buttons.containers.UlHeaderWizard"></div>
 
 			<div sclass="col s12">
-				<include id="include"></include>
+				<include id="include" src="@bind(vm.srcPageContent)"></include>
 			</div>
 
 		</div>
@@ -17,7 +16,7 @@
 		<div class="row">
 			<div class="col s6 offset-s3" align="center">
 				<div id="divButtonsWizard" sclass="row"
-					use="karen.core.wizard.buttons.containers.DivButtonsWizard">
+					use="karen.core.simple_list.wizard.buttons.containers.DivButtonsWizard">
 				</div>
 			</div>
 		</div>
