--- a/WebContent/views/desktop/gestion/voluntariado/postulacion/registroMotivo.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/postulacion/registroMotivo.zul
@@ -2,7 +2,7 @@
 	<div sclass="animated fadeInLeft">
 		<div class="row">
 			<div class="col s12" align="center" style="margin-bottom: 15px;">
-				<label value="Ingrese el motivo de la selección" sclass="label-medium-500"></label>
+				<label value="Ingrese el motivo del rechazo" sclass="label-medium-500"></label>
 			</div>
 		</div>
 		
@@ -19,6 +19,7 @@
 								</template>
 							</combobox>
 						</div>
+						<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_motivo, position=after_end"/>
 					</div>
 					
 					<div class="col s12">
@@ -26,7 +27,20 @@
 							<n:label for="nombre">Observaciones</n:label>
 								<textbox id="observaciones" type="text" sclass="materialize-textarea" multiline="true" maxlength="200" value="@bind(vm.selectedObject.observacion)"> </textbox>
 						</div>
+						<span sclass="fa fa-question-circle fa-lg help-icon" tooltip="pop_observacion, position=after_end"/>
 					</div>
+					
+					<popup id="pop_motivo" width="200px">
+        				<html>
+        					<![CDATA[Por favor, seleccione el motivo del egreso que desea registrar.<br/>]]>
+        				</html>
+    				</popup>
+    				
+    				<popup id="pop_observacion" width="200px">
+        				<html>
+        					<![CDATA[Por favor, ingrese la observación del egreso que desea registrar.<br/>]]>
+        				</html>
+    				</popup>
 					
 				</div>
 			</div>
