validaciones en gestion ayudas y comienzo de reporte trabajador

--- a/WebContent/views/desktop/gestion/ayudas/beneficiarioYFamiliar/selectFamiliar.zul
+++ b/WebContent/views/desktop/gestion/ayudas/beneficiarioYFamiliar/selectFamiliar.zul
@@ -22,36 +22,23 @@
 
 
 							<listhead sizable="true">
-							<listheader width="15%" label="Titulo de Solicitud" />
-							<listheader width="20%" label="Estatus de Solicitud" />
-							<listheader width="20%" label="Nombre de Beneficiario" />
-							<listheader width="20%" label="Apellido de Beneficiario" />
-							<listheader width="20%" label="Identificacion de Beneficiario" />
-							
-							<!-- 
+					
 							<listheader width="20%" label="Nombre de Representante" />
 							<listheader width="20%" label="Apellido de Representante" />
-							 -->
+							<listheader width="12%" label="Identificacion" />
+							<listheader width="12%" label="Telefono" />
+							<listheader width="12%" label="Correo" />
 							
-							<listheader width="10%" label="Urgencia" />
-							<listheader width="10%" label="Fecha" />
+						
 							</listhead>
 							<template name="model">
 								<listitem>
-									<listcell
-										label="@load(each.titulo)" />
-										<listcell label="@load(each.estatusSolicitudEnum)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.apellido)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.identificacion)" />
 								
-								<!-- 
-								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
-								<listcell label="@load(each.fkBeneficiario.fkPersona.apellido)" />
-								 -->
-								
-								<listcell label="@load(each.urgenciaEnum)" />
-								<listcell label="${m:convertirLongATimestamp(each.fecha)}" />  
+								<listcell label="@load(each.fkPersona.nombre)" />
+								<listcell label="@load(each.fkPersona.apellido)" />
+								<listcell label="@load(each.fkPersona.identificacion)" />
+								<listcell label="@load(each.fkPersona.telefono1)" />
+								<listcell label="@load(each.fkPersona.correo)" />
 									
 								</listitem>
 							</template>
