--- a/WebContent/views/desktop/gestion/ayudas/evaluacionSolicitud/selectSolicitudAyuda.zul
+++ b/WebContent/views/desktop/gestion/ayudas/evaluacionSolicitud/selectSolicitudAyuda.zul
@@ -25,15 +25,21 @@
 							<listheader width="15%" label="Titulo de Solicitud" />
 							<listheader width="20%" label="Estatus de Solicitud" />
 							<listheader width="20%" label="Nombre de Beneficiario" />
+							<listheader width="20%" label="Apellido de Beneficiario" />
+							<!-- <listheader width="20%" label="Nombre de Representante" />
+							<listheader width="20%" label="Apellido de Representante" />  -->
 							<listheader width="10%" label="Urgencia" />
 							<listheader width="10%" label="Fecha" />
 							</listhead>
 							<template name="model">
 								<listitem>
-									<listcell
-										label="@load(each.titulo)" />
-										<listcell label="@load(each.estatusSolicitudEnum)" />
+								
+								<listcell label="@load(each.titulo)" />		
+								<listcell label="@load(each.estatusSolicitudEnum)" />
 								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
+								<listcell label="@load(each.fkBeneficiario.fkPersona.apellido)" />
+								<!-- <listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
+								<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />  -->
 								<listcell label="@load(each.urgenciaEnum)" />
 								<listcell label="${m:convertirLongATimestamp(each.fecha)}" />  
 									
