--- a/WebContent/views/desktop/gestion/ayudas/solicitudes/catalogoBeneficiario.zul
+++ b/WebContent/views/desktop/gestion/ayudas/solicitudes/catalogoBeneficiario.zul
@@ -3,7 +3,7 @@
 	<window width="80%" sclass="window-dialog" action="show: slideIn;hide: slideOut"
 		use="karen.core.dialog.catalogue.list_pagination.controllers.C_ListPaginationCatalogueDialog"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.ayudas.solicitudes.VM_CatalogoBeneficiarioFamiliar', dialogData=arg.get('dialogData'))">
+		viewModel="@id('vm') @init('ve.smile.gestion.ayudas.solicitudes.VM_CatalogoBeneficiario', dialogData=arg.get('dialogData'))">
 		<caption label="BENEFICIARIO" style="margin-left: 40%;"/>
 		<separator height="20px"></separator>
 		<n:h6 style="margin-left: 5%;">Por favor seleccione un beneficiario:</n:h6>
@@ -18,17 +18,17 @@
 				<listheader label="Apellido de Beneficiario" />
 				<listheader label="Direccion" />
 				<listheader label="Fecha de Nacimiento Beneficiario" />
-				<listheader label="Sexo Beneficiario" />
+				<listheader label="Identificacion Beneficiario" />
 			</listhead>
 			<template name="model">
 				<listitem>
 					<listcell label="@load(each.fkFamiliar.fkPersona.nombre)" />
 					<listcell label="@load(each.fkFamiliar.fkPersona.apellido)" />
-					<listcell label="@load(each.fkBeneficiario.fkPersona.nombre)" />
-					<listcell label="@load(each.fkBeneficiario.fkPersona.apellido)" />
-					<listcell label="@load(each.fkBeneficiario.fkPersona.direccion)" />
-					<listcell label="@load(each.fkBeneficiario.fkPersona.fechaNacimiento)" />
-					<listcell label="@load(each.fkBeneficiario.fkPersona.sexo)" />
+					<listcell label="@load(each.fkPersona.nombre)" />
+					<listcell label="@load(each.fkPersona.apellido)" />
+					<listcell label="@load(each.fkPersona.direccion)" />
+					<listcell label="@load(each.fkPersona.fechaNacimiento)" />
+					<listcell label="@load(each.fkPersona.identificacion)" />
 			
 				</listitem>
 			</template>
