Ejecución de capacitaciones planificadas

--- a/WebContent/views/desktop/gestion/voluntariado/capacitacion/ejecucion/catalogoMotivo.zul
+++ b/WebContent/views/desktop/gestion/voluntariado/capacitacion/ejecucion/catalogoMotivo.zul
@@ -3,28 +3,26 @@
 		action="show: slideIn;hide: slideOut"
 		use="karen.core.dialog.catalogue.list_pagination.controllers.C_ListPaginationCatalogueDialog"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.capacitacion.planificacion.viewmodels.VM_CatalogoDirectorio', dialogData=arg.get('dialogData'))">
-		<caption label="DIRECTORIO" style="margin-left: 40%;" />
+		viewModel="@id('vm') @init('ve.smile.gestion.voluntariado.capacitacion.ejecucion.viewmodels.VM_CatalogoMotivo', dialogData=arg.get('dialogData'))">
+		<caption label="MOTIVOS" style="margin-left: 40%;" />
 		<separator height="20px"></separator>
-		<n:h6 style="margin-left: 5%;"> Por favor seleccione una dirección:	</n:h6>
+		<n:h6 style="margin-left: 5%;"> Por favor seleccione un motivo:</n:h6>
 		<separator height="20px"></separator>
 		<listbox id="listbox" model="@load(vm.objectList)" selectedItem="@bind(vm.selectedObject)" style="width: 90%; margin-left: 5%;padding-bottom: 5%;">
 			<listhead sizable="true">
 				<listheader label="Nombre" />
-				<listheader label="Estado" />
-				<listheader label="Ciudad" />
-				<listheader label="Dirección" />
+				<listheader label="Descripción" />
+				<listheader label="Clasificador de motivos" />
 			</listhead>
 			<template name="model">
 				<listitem>
 					<listcell label="@load(each.nombre)" />
-					<listcell label="@load(each.fkCiudad.fkEstado.nombre)" />
-					<listcell label="@load(each.fkCiudad.nombre)" />
-					<listcell label="@load(each.direccion)" />
+					<listcell label="@load(each.descripcion)" />
+					<listcell label="@load(each.fkClasificadorMotivo.nombre)" />
 				</listitem>
 			</template>
 			<listfoot>
-				<listfooter id="listFoot" span="4" use="karen.core.listfoot.ListFoot"> </listfooter>
+				<listfooter id="listFoot" span="3" use="karen.core.listfoot.ListFoot"> </listfooter>
 			</listfoot>
 		</listbox>
 
