--- a/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/evaluarTareaEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/ejecucion/evaluarTareas/evaluarTareaEventoPlanificado.zul
@@ -1,3 +1,5 @@
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<style>
 		.z-datebox input, .z-datebox-input:focus,
@@ -23,35 +25,46 @@
 
 				<listbox height="300px"
 					emptyMessage="No hay tareas asociados al evento."
-					model="@load(vm.eventoPlanificadotareas)" >
+					model="@load(vm.eventoPlanificadotareas)">
 					<listhead sizable="true">
-						<listheader width="12%" label="Ejecutada" />
-						<listheader width="25%" label="Tarea" />						
-						<listheader width="20%" label="Fecha Planificada" />
-						<listheader width="20%" label="Fecha Ejecución" align="center" />
-						<listheader width="30%" label="Motivo" align="center" />
+						<listheader width="19%" label="Ejecutada" />
+						<listheader width="15%" label="Tarea" />
+						<listheader width="19%"
+							label="Fecha Planificada" />
+						<listheader width="19%" label="Fecha Ejecución"
+							align="center" />
+						<listheader width="20%" label="Motivo"
+							align="center" />
 						<listheader width="8%" label="" align="right" />
 					</listhead>
 					<template name="model">
 						<listitem>
-						<listcell
-								>
-								<checkbox label="SI"></checkbox>
+							<listcell>
+								<n:div class="switch">
+									<n:label>
+										NO
+										<checkbox
+											checked="@bind(each.ejecucion)">
+										</checkbox>
+										SI
+									</n:label>
+								</n:div>
 							</listcell>
 							<listcell
 								label="@load(each.fkTarea.nombre)">
 							</listcell>
 							<listcell>
+							
+								<label
+									value="${m:convertirLongADate(each.fechaPlanificada)}">
+								</label>	
+							</listcell>
+
+							<listcell>
 								<datebox format="dd/MM/yyyy"
-									value="@bind(each.fechaPlanificadaDate)" disabled="true">
+									value="@bind(each.fechaEjecutadaDate)">
 								</datebox>
 							</listcell>
-								
-							<listcell>	
-							<datebox format="dd/MM/yyyy"
-									value="@bind(each.fechaEjecutadaDate)">
-								</datebox>							
-							</listcell>								
 							<listcell>
 								<label
 									value="@bind(each.fkMotivo.nombre)">
@@ -67,7 +80,7 @@
 									iconSclass="fa fa-search" tooltiptext="Editar Lugar"
 									style="/padding: 5px 6px; background-color: #2AA4EF !important; float: right">
 								</button>
-								</listcell>							
+							</listcell>
 						</listitem>
 					</template>
 				</listbox>
