--- a/WebContent/views/desktop/gestion/evento/planificacion/tareas/recursos/selectEventoPlanificado.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/tareas/recursos/selectEventoPlanificado.zul
@@ -1,3 +1,5 @@
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
@@ -35,7 +37,7 @@
 									<listcell
 										label="@load(each.fkEvento.descripcion)" />
 									<listcell
-										label="@load(each.fechaPlanificada)" />
+										label="${m:convertirLongADate(each.fechaPlanificada)}" />
 									<listcell
 										label="@load(each.fkDirectorio.nombre)" />
 									<listcell
