--- a/WebContent/views/desktop/gestion/evento/planificacion/tareas/recursos/tareaRecursos.zul
+++ b/WebContent/views/desktop/gestion/evento/planificacion/tareas/recursos/tareaRecursos.zul
@@ -1,12 +1,22 @@
 <div sclass="row section" style="background: #FFFFFF">
 <style>
+		.z-grid-emptybody td { font-family: Roboto; font-size: 13px;
+		font-weight: normal; font-style: normal; color: #aaa;
+		font-style: italic; text-align: center; height: 1px; padding:
+		6px !important; }
+
+		.z-grid .z-column-content { font-family: 'Roboto'; font-size:
+		13px; color: #ffffff; background: #8d7a6f; }
+
+		tr.row-vacaciones { border-bottom: 1px solid #CFCFCF;
+		background: #ffffff; }
+
+
 		.z-row .z-detail-outer { width: 40px; min-width: 40px;
 		border-top: 1px solid #cfcfcf; padding: 18px 6px; line-height:
 		normal; background: transparent !important; vertical-align: top;
 		}
 
-		.z-grid .z-column-content { font-family: 'Roboto'; font-size:
-		13px; color: #707070; }
 
 		.z-auxhead:hover .z-auxheader-content { background: #EEEEEE
 		!important; }
@@ -20,8 +30,6 @@
 		transparent !important; text-align: center; overflow: hidden;
 		white-space: nowrap; cursor: pointer; }
 
-		tr.row-vacaciones { border-bottom: 1px solid #CFCFCF; }
-
 		.z-columns th:first-child { border-left: none; border-right:
 		none !important; }
 
@@ -32,8 +40,8 @@
 		193, 0.27); }
 
 
-		.z-messagebox .z-label { font-family: Arial, Sans-serif;
-		font-size: 15px !important; color: #363636; }
+		.z-messagebox .z-label { font-family: 'Roboto'; font-size: 15px
+		!important; color: #363636; }
 
 		.z-cell .vacacion { background-color: #fff !important;
 		border-left: 1px solid #cfcfcf !important; }
@@ -50,7 +58,14 @@
 		!important; }
 
 		.z-grid.periodo>div.z-grid-body { overflow: auto; max-height:
-		320px !important; }
+		500px !important; }
+	
+		.z-datebox input, .z-datebox-input:focus,
+		.z-datebox-input:active{ font-size: 1.2em !important;
+		text-align: center; height: 1.5em !important; border: 1px solid
+		#999999; border-radius: 7px; font-size: 1em !important;
+		text-align: center; margin-top: 4px; width: 87%;}
+		
 
 	</style>
 			<div sclass="col s12">
@@ -69,7 +84,7 @@
 
 						</column>
 					</columns>
-					<template name="model">
+					<template name="model" var="evento" status="statusEvento">
 						<row style="overflow:auto; max-height:400px"
 							sclass="row-vacaciones">
 
@@ -77,7 +92,7 @@
 							<detail open="false" fulfill="onOpen">
 
 								<grid sclass="vacacion"
-									model="@bind(each.listEventPlanTareaRecursos)">
+									model="@bind(evento.listEventPlanTareaRecursos)">
 									<auxhead>
 									<auxheader colspan="6" align="center"
 									label="RECURSOS ASOCIADOS">
@@ -95,10 +110,10 @@
 											align="center" width="15%">
 										</column>
 										<column label="Fecha de Asignación"
-											align="center" width="20%">
+											align="center" width="21%">
 										</column>
 										<column label="eliminar"											
-											align="center" width="10%">
+											align="center" width="9%">
 										</column>
 									</columns>
 									<template name="model">
@@ -123,13 +138,13 @@
 											</cell>
 											<cell>
 											<datebox format="dd/MM/yyyy"
-												value="@bind(each.fechaAsignacionDate)" width="190px">
+												value="@bind(each.fechaAsignacionDate)">
 											</datebox>
 											</cell>
 											<cell sclass="vacacion"
 												style="    border-left: 2px solid #EEEEEE !important;">
 												<button
-													onClick="@command('eliminarPeriodoDisfrute', periodoDisfrute=each)"
+													onClick="@command('eliminarRecurso', indicadorEventoPsTarea=each, index=statusEvento.index)"
 													sclass="btn-sm-grid btn-pink " style="margin-left: 3px;"
 													tooltiptext="Eliminar" iconSclass="fa fa-trash">
 												</button>
@@ -141,16 +156,16 @@
 
 							<cell sclass="periodo">
 								<label
-									value="@bind(each.fkTarea.nombre) " />
+									value="@bind(evento.fkTarea.nombre) " />
 							</cell>
 
 							<cell sclass="periodo">
 								<label
-									value="@bind(each.fkTarea.descripcion)" />
+									value="@bind(evento.fkTarea.descripcion)" />
 							</cell>
 							<cell sclass="periodo">
 								<label
-									value="@bind(each.fkTarea.fkClasificadorTarea.nombre)" />
+									value="@bind(evento.fkTarea.fkClasificadorTarea.nombre)" />
 							</cell>
 							<cell sclass="periodo">							
 								<button
